{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 17,
  "lineage": "7f3e6263-ec96-0af1-353a-6f66df722363",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c9c942bd7bf113a2",
            "arn": "arn:aws:ec2:ap-northeast-2:367490544401:instance/i-0da7ee412e4b23deb",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0da7ee412e4b23deb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Groom",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0906910b644a5d09b",
            "private_dns": "ip-10-0-4-173.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.173",
            "public_dns": "ec2-3-38-211-140.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.38.211.140",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0901de9e51d417d14",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-068d807a6187ef02e",
            "tags": {
              "Name": "ubuntu_bastion"
            },
            "tags_all": {
              "Name": "ubuntu_bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c448bfff6b4f2d8d"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:367490544401:security-group/sg-0c448bfff6b4f2d8d",
            "description": "inbound all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "outbound all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c448bfff6b4f2d8d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "inbound 0.0.0.0",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "bastion_sg",
            "name_prefix": "",
            "owner_id": "367490544401",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Inbound \u0026 outbound allow all"
            },
            "tags_all": {
              "Name": "Inbound \u0026 outbound allow all"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f81ec08f2f45ddc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0adc3dd4250cbbd1c",
            "domain": "vpc",
            "id": "eipalloc-0adc3dd4250cbbd1c",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-38-14-73.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.38.14.73",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Groom_vpc-ap-northeast-2a"
            },
            "tags_all": {
              "Name": "Groom_vpc-ap-northeast-2a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:367490544401:internet-gateway/igw-0214531b23e74ff8c",
            "id": "igw-0214531b23e74ff8c",
            "owner_id": "367490544401",
            "tags": {
              "Name": "Groom_vpc"
            },
            "tags_all": {
              "Name": "Groom_vpc"
            },
            "vpc_id": "vpc-05f81ec08f2f45ddc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0adc3dd4250cbbd1c",
            "association_id": "eipassoc-0670a3ee830114122",
            "connectivity_type": "public",
            "id": "nat-09527aa4b28c99063",
            "network_interface_id": "eni-081df5b57d1523789",
            "private_ip": "10.0.4.209",
            "public_ip": "3.38.14.73",
            "subnet_id": "subnet-068d807a6187ef02e",
            "tags": {
              "Name": "Groom_vpc-ap-northeast-2a"
            },
            "tags_all": {
              "Name": "Groom_vpc-ap-northeast-2a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a1c7b9d7a42b961a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09527aa4b28c99063",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a1c7b9d7a42b961a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0214531b23e74ff8c",
            "id": "r-rtb-0dd95f5405d076f171080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dd95f5405d076f17",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:367490544401:route-table/rtb-0a1c7b9d7a42b961a",
            "id": "rtb-0a1c7b9d7a42b961a",
            "owner_id": "367490544401",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Groom_vpc-private"
            },
            "tags_all": {
              "Name": "Groom_vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f81ec08f2f45ddc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:367490544401:route-table/rtb-0dd95f5405d076f17",
            "id": "rtb-0dd95f5405d076f17",
            "owner_id": "367490544401",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Groom_vpc-public"
            },
            "tags_all": {
              "Name": "Groom_vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f81ec08f2f45ddc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0630046212287ef0c",
            "route_table_id": "rtb-0a1c7b9d7a42b961a",
            "subnet_id": "subnet-0b6b0a88afd372217"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073d0dcce5ab5bfbb",
            "route_table_id": "rtb-0a1c7b9d7a42b961a",
            "subnet_id": "subnet-025a64bf76525dc7a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09446deb7b971f324",
            "route_table_id": "rtb-0dd95f5405d076f17",
            "subnet_id": "subnet-068d807a6187ef02e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:367490544401:subnet/subnet-0b6b0a88afd372217",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6b0a88afd372217",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "367490544401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Groom_vpc-private-ap-northeast-2a",
              "kubernetes.io/cluster/eks_name": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "Groom_vpc-private-ap-northeast-2a",
              "kubernetes.io/cluster/eks_name": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-05f81ec08f2f45ddc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:367490544401:subnet/subnet-025a64bf76525dc7a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025a64bf76525dc7a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "367490544401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Groom_vpc-private-ap-northeast-2c",
              "kubernetes.io/cluster/eks_name": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "Groom_vpc-private-ap-northeast-2c",
              "kubernetes.io/cluster/eks_name": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-05f81ec08f2f45ddc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:367490544401:subnet/subnet-068d807a6187ef02e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068d807a6187ef02e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "367490544401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Groom_vpc-public-ap-northeast-2a",
              "kubernetes.io/cluster/eks_name": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "Groom_vpc-public-ap-northeast-2a",
              "kubernetes.io/cluster/eks_name": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-05f81ec08f2f45ddc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:367490544401:vpc/vpc-05f81ec08f2f45ddc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09e24d2fe15519087",
            "default_route_table_id": "rtb-0774008316e69cade",
            "default_security_group_id": "sg-0768aba7943c746fe",
            "dhcp_options_id": "dopt-06ad46c56fb51578a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05f81ec08f2f45ddc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0774008316e69cade",
            "owner_id": "367490544401",
            "tags": {
              "Name": "Groom_vpc"
            },
            "tags_all": {
              "Name": "Groom_vpc"
            }
          }
        }
      ]
    }
  ]
}